Fix : Spacing issue

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -3,7 +3,7 @@
 }
 
 .footer-inner {
-  @apply flex flex-col gap-2 justify-between pt-12 pb-8 md:pb-8 w-full max-w-lg text-[16px];
+  @apply flex flex-col gap-2 justify-between pt-12 pb-12 md:pb-8 w-full max-w-lg text-[16px];
 }
 
 .footer-separator {
